[gd_scene load_steps=6 format=3 uid="uid://b4yi1j6ssr4r3"]

[ext_resource type="Script" path="res://SCRIPT/box.gd" id="1_61yda"]
[ext_resource type="Texture2D" uid="uid://c162sd0rqs0gp" path="res://ASSETS/Metal Box.png" id="1_kyq0y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfp68"]
size = Vector2(53, 51.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fsoti"]
size = Vector2(30, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kta2y"]
size = Vector2(33, 42)

[node name="Vox" type="Node2D"]

[node name="Box" type="CharacterBody2D" parent="."]
collision_layer = 3
collision_mask = 3
slide_on_ceiling = false
script = ExtResource("1_61yda")

[node name="Sprite2D" type="Sprite2D" parent="Box"]
position = Vector2(-7, 5.00001)
scale = Vector2(0.107468, 0.101087)
texture = ExtResource("1_kyq0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box"]
position = Vector2(-6.5, 4.25)
shape = SubResource("RectangleShape2D_kfp68")

[node name="Left" type="Area2D" parent="Box"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box/Left"]
position = Vector2(-22, 8)
shape = SubResource("RectangleShape2D_fsoti")

[node name="Right" type="Area2D" parent="Box"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Box/Right"]
position = Vector2(8, 9)
shape = SubResource("RectangleShape2D_kta2y")

[connection signal="body_entered" from="Box/Left" to="Box" method="_on_left_body_entered"]
[connection signal="body_exited" from="Box/Left" to="Box" method="_on_left_body_exited"]
[connection signal="body_entered" from="Box/Right" to="Box" method="_on_right_body_entered"]
[connection signal="body_exited" from="Box/Right" to="Box" method="_on_right_body_exited"]
